fix: final fixes on mobile scroll of about page profile picture position fixed on mobile

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -12,13 +12,15 @@
     position: sticky;
     height: fit-content;
     top: 25%;
-    transform: translateY(10%);
+    transform: translateY(20%);
 }
 
 @media (max-width: breakpoints.$s) {
     .avatar {
+        position: static !important;
         top: auto;
         transform: none;
+        margin-bottom: var(--static-space-xl);
     }
 
     .textAlign {
